added reviewed problem of combinations